--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta name="copyright" content="JetBlue">
-    <meta name="author" content="Dotcom engineering">
+    <meta charset="UTF-8">
     <title>Dotcom versions tool</title>
     <link rel="stylesheet" href="popup.css">
     <script src="popup.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A tool for viewing Dotcom environment versions.">
+    <meta name="copyright" content="JetBlue">
+    <meta name="author" content="@rottinajb">
   </head>
   <body>
     <h1>Dotcom Envs</h1>
-    <p>Prd: <code id="prd"></code></p>
-    <p>NPrd: <code id="nprd"></code></p>
+    <p><a target="_new" title="dotcom.jetblue.com" href="https://dotcom.jetblue.com">Prd: </a> <code id="prd"></code></p>
+    <p><a target="_new" href="https://dotcom-nprd.jetblue.com">NPrd:</a> <code id="nprd"></code></p>
   </body>
 </html>
