Add background worker, options, caching and i18n

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
     <meta name="author" content="@rottinajb">
   </head>
   <body>
-    <h1>Dotcom Envs</h1>
+    <h1 id="tagline"></h1>
     <p><a target="_new" title="dotcom.jetblue.com" href="https://dotcom.jetblue.com">Prd: </a> <code id="prd"></code></p>
     <p><a target="_new" href="https://dotcom-nprd.jetblue.com">NPrd:</a> <code id="nprd"></code></p>
   </body>
